--- a/css/main.css
+++ b/css/main.css
@@ -407,8 +407,31 @@ body {
 
 .worklist {
     display: flex;
+    position: relative;
+    overflow: hidden;
     justify-content: space-between;
     margin-bottom: 0;
+}
+
+.worklist .label {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 4px;
+
+    width: 370px;
+    height: 70px;
+
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), rgba(47, 48, 58, 0.8);
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--primary-white-color);
+
+    padding: 27px;
 }
 
 .worklist-section {
