--- a/css/main.css
+++ b/css/main.css
@@ -201,6 +201,7 @@ body {
 .nav-contacts .link:hover,
 .nav-contacts .link:focus {
     color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link.current {
@@ -267,9 +268,9 @@ body {
     width: 696px;
 
     margin: 0 auto 30px;
-
-
 }
+
+
 
 /* Button */
 
@@ -286,6 +287,7 @@ body {
 .button:hover {
     color: var(--primary-white-color);
     background-color: var(--accent-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-portfolio:focus,
@@ -293,6 +295,8 @@ body {
     color: var(--primary-white-color);
     background-color: var(--accent-color);
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.250);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -352,8 +356,6 @@ body {
 
 .feature {
     display: flex;
-    /* margin-top: 94px;
-    margin-bottom: 94px; */
 }
 
 .feature-list {
@@ -536,49 +538,12 @@ body {
 .social-link:focus {
     background-color: var(--accent-color);
     color: var(--primary-white-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon {
     fill: currentColor;
 }
-
-/* .social-media {
-    display: flex;
-    justify-content: center;
-    margin: 16px 32px 30px 32px;
-}
-
-.social-item {
-    display: flex;
-    margin-right: 10px;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    padding: 12px;
-}
-
-.social-item:last-child {
-    margin-right: 0;
-}
-
-.social-link {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-    color: var(--icons-color);
-}
-
-.social-item:hover,
-.social-item:focus {
-    background-color: var(--accent-color);
-    fill: var(--primary-white-color);
-}
-
-.social-icon {
-    fill: currentColor;
-} */
 
 /* Портфоліо/Portfolio */
 
@@ -593,15 +558,6 @@ body {
     display: block;
 }
 
-/* .portfolio-btn {
-    margin-top: 94px;
-    margin-bottom: 34px;
-} */
-
-/* .portfolio-btn .item + .item {
-    margin-left: 8px;
-} */
-
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
@@ -613,6 +569,11 @@ body {
     background-color: var(--primary-white-color);
     margin-right: 30px;
     margin-bottom: 30px;
+}
+
+.portfolio-list .image-wrapper {
+    position: relative;
+    overflow: hidden;
 }
 
 .portfolio-title {
@@ -649,11 +610,42 @@ body {
     margin: 0;
 }
 
-.portfolio-link:hover,
-.portfolio-link:focus {
+.portfolio-list .card:hover .overlay {
+    transform: translatey(0);
+    opacity: 1;
+  }
+
+  .overlay {
+    position: absolute;
+    display: flex;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    justify-content: center;
+    align-items: center;
+    
+    background-color: rgba(33, 150, 243, 0.9);
+
+    font-size: 18px;
+    line-height: 1.55;
+    letter-spacing: 0.03em;
+    color: var(--primary-white-color);
+    padding: 63px 24px;
+
+    opacity: 0;
+  
+    transform: translatey(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card:hover,
+.card:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
     0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list .border {
@@ -672,19 +664,7 @@ body {
     border-left-color: #EEEEEE;
 }
 
-/* .card:hover,
-.card:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-    0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-} */
-
 /* Постійні клієнти */
-/* .clients {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-} */
 
 .section-clients {
     display: flex;
@@ -728,6 +708,8 @@ body {
 .clients-item:focus {
     border-color: var(--accent-color);
     color: var(--accent-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-icon {
@@ -828,6 +810,8 @@ body {
 .joinus .social-link:focus {
     background-color: var(--accent-color);
     color: var(--primary-white-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .joinus .social-icon {
@@ -862,4 +846,56 @@ body {
 .footer-nav .link:hover,
 .footer-nav .link:focus {
     color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(0, 0, 0, 0.2);
+
+    opacity: 1;
+
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+    transform: rotate(-180deg) scale(2, 10);
+  }
+
+.modal {
+    position: absolute;
+    
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+    width: 528px;
+    height: 581px;
+    border-radius: 4px;
+    padding: 20px;
+
+    background-color: var(--primary-white-color);
+}
+
+.modal .close-button {
+    position: absolute;
+    top: 6px;
+    right: 6px;
+    cursor: pointer;
+}
+
+/* .close-button:hover,
+.close-button:focus {
+    fill: var(--accent-color);
+} */
