--- a/css/main.css
+++ b/css/main.css
@@ -893,6 +893,9 @@ body {
     top: 6px;
     right: 6px;
     cursor: pointer;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: var(--primary-white-color);
 }
 
 /* .close-button:hover,
