--- a/css/main.css
+++ b/css/main.css
@@ -288,6 +288,7 @@ body {
     color: var(--primary-white-color);
     background-color: var(--accent-color);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-portfolio:focus,
@@ -539,6 +540,7 @@ body {
     background-color: var(--accent-color);
     color: var(--primary-white-color);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon {
@@ -869,8 +871,8 @@ body {
 }
 
 .backdrop.is-hidden .modal {
-    transform: rotate(-180deg) scale(2, 10);
-  }
+    transform: rotate(-180deg) scale(3);
+}
 
 .modal {
     position: absolute;
@@ -895,10 +897,13 @@ body {
     cursor: pointer;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: var(--primary-white-color);
+    background-color: transparent;
 }
 
-/* .close-button:hover,
+.close-button:hover,
 .close-button:focus {
     fill: var(--accent-color);
-} */
+    border-color: var(--accent-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
