--- a/css/main.css
+++ b/css/main.css
@@ -162,6 +162,7 @@ body {
     padding-bottom: 32px;
     
     text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav .item + .item {
@@ -190,6 +191,7 @@ body {
     padding-bottom: 32px;
     
     text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-contacts .item + .item {
@@ -296,8 +298,6 @@ body {
     color: var(--primary-white-color);
     background-color: var(--accent-color);
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.250);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -316,6 +316,8 @@ body {
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.250);
 
     padding: 10px 32px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-portfolio {
@@ -332,7 +334,9 @@ body {
     border: 0 solid;
     border-color: var(--accent-color);
     border-radius: 4px;
-    /* box-shadow: 0 4px 4px rgba(0, 0, 0, 0.250) */
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Секція */
@@ -410,31 +414,48 @@ body {
 
 .worklist {
     display: flex;
-    position: relative;
-    overflow: hidden;
+    /* position: relative;
+    overflow: hidden; */
     justify-content: space-between;
     margin-bottom: 0;
 }
 
+.worklist li {
+    position: relative;
+    overflow: hidden;
+}
+
+.worklist-img {
+    display: block;
+    width: 100%;
+    height: auto;
+    /* position: relative;
+    overflow: hidden; */
+}
+
 .worklist .label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     bottom: 0;
-    margin-bottom: 4px;
+    left: 0;
 
-    width: 370px;
+    width: 100%;
     height: 70px;
 
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), rgba(47, 48, 58, 0.8);
+    background-color:  rgba(47, 48, 58, 0.8);
 
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
-    text-align: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--primary-white-color);
 
-    padding: 27px;
+    margin: 0;
+
+    /* padding: 27px; */
 }
 
 .worklist-section {
@@ -443,7 +464,7 @@ body {
 }
 
 .worklist-title {
-    display: block;
+    display: flex;
     color: var(--title-text-color);
     font-weight: 700;
     font-size: 36px;
@@ -533,6 +554,7 @@ body {
     border-radius: 50%;
     color: var(--icons-color);
     cursor: pointer;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
@@ -614,19 +636,20 @@ body {
 
 .portfolio-list .card:hover .overlay {
     transform: translatey(0);
-    opacity: 1;
+    /* opacity: 1; */
   }
 
-  .overlay {
+.overlay {
     position: absolute;
     display: flex;
     bottom: 0;
-    top: 0;
     left: 0;
-    right: 0;
 
+    /* width: 100%;
+    height: 100%; */
+    
     justify-content: center;
-    align-items: center;
+    justify-items: center;
     
     background-color: rgba(33, 150, 243, 0.9);
 
@@ -635,11 +658,13 @@ body {
     letter-spacing: 0.03em;
     color: var(--primary-white-color);
     padding: 63px 24px;
-
-    opacity: 0;
   
-    transform: translatey(100%);
+    transform: translatey(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay p {
+    margin: 0;
 }
 
 .card:hover,
@@ -704,14 +729,15 @@ body {
     color: var(--icons-color);
     border-color: var(--border-color);
     border-radius: 4px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-item:hover,
 .clients-item:focus {
     border-color: var(--accent-color);
     color: var(--accent-color);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .clients-icon {
@@ -804,7 +830,7 @@ body {
     width: 44px;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1); 
-    color: var(--icons-color);
+    color: var(--primary-white-color);
     cursor: pointer;
 }
 
@@ -813,7 +839,7 @@ body {
     background-color: var(--accent-color);
     color: var(--primary-white-color);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .joinus .social-icon {
@@ -843,6 +869,7 @@ body {
 
 .footer-nav .link {
     text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-nav .link:hover,
@@ -879,31 +906,32 @@ body {
     
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) rotate(0);
+    transform: translate(-50%, -50%) rotate(0) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     width: 528px;
     height: 581px;
     border-radius: 4px;
-    padding: 20px;
 
     background-color: var(--primary-white-color);
 }
 
 .modal .close-button {
     position: absolute;
-    top: 6px;
-    right: 6px;
+    top: 8px;
+    right: 8px;
+    height: 30px;
+    width: 30px;
     cursor: pointer;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: transparent;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-button:hover,
 .close-button:focus {
     fill: var(--accent-color);
-    border-color: var(--accent-color);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* border-color: var(--accent-color);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
